--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -4,6 +4,7 @@
 	top: 0;
 	left: 0;
 
+	min-width: 900px;
 	width: 100%;
 }
 
@@ -11,7 +12,7 @@
 	height: 45px;
 	z-index: 100;
 
-	padding: 0 10%;
+	padding: 0 80px;
 
 	display: flex;
 	flex-direction: row;
